0.1.6 (unreleased)
=====
* Added branch_and_bound_opt.
* Added get_row_primal and get_row_dual (thanks Sean McLaughlin).
* Protect values used in blocking sections.

0.1.5 (2006-07-25)
=====
* Added set/get_simplex_iteration_count.
* Fixed a bug in new_blp (unnecessary CAMLlocal) and removed unnecessary
  CAMLparams (thanks Markus Mottl).
* Allow other threads to run while simplex, interior or branch_and_bound is
  being executed (added blocking sections).

0.1.4 (2006-04-07)
=====
* Corrected get_obj_val to handle mip problems.
* get_col_primal now return correct values for mip problems.
* Added {read,write}_cplex functions.

0.1.3 (2005-09-24)
=====
* Corrected forgotten indice shifting in set_col_kind (thanks Pierre Lemaire).
* Corrected the get_col_primals function, the returned array's length is now the
  number of columns of the lp (found by Erick Matsen).
* Added the get_num_cols function.
* Using caml_alloc_custom in ocaml_glpk_new_prob, it should fix a possible
  memory corruption problem (reported by Stefan Ratschan).

0.1.2 (2005-04-18)
=====
* Put Val_int instead of Int_val in ocaml_glpk_get_direction and
  ocaml_glpk_get_class and added a unit parameter to ocaml_glpk_new_prob
  (thanks Mike Furr).
* Corrected a bug in load_matrix: glpk only wants non-null elements (found by
  Jeremy Dubreil).
* Added the use_presolver function to get exception with simplex when there is
  no feasible solution.
* Using caml namespace functions.

0.1.1 (2004-06-23)
=====
* Added functions: get_prob_name, get_obj_name, get_class, get_direction,
  get_row_name, get_col_name, warm_up.
* We are now raising exceptions on some errors (they are not all handled yet).

0.1.0 (2004-04-24)
=====
* Initial release.